fixed print spacing

--- a/src/Hvz/GameBundle/Resources/public/css/print.css
+++ b/src/Hvz/GameBundle/Resources/public/css/print.css
@@ -1,5 +1,5 @@
 .card-spacer {
-	height: 10.0em;
+	height: 10.5em;
 }
 
 .card {
